# emcli

./: .gitignore  CMakeLists.txt
demo/: cli_demo.c  cli_demo_commands.c  cli_demo_port_x86.c
inc/: cli.h  cli_port.h
src/: cli.c
